--- a/src/config/cfg_rules.ini
+++ b/src/config/cfg_rules.ini
@@ -17,6 +17,7 @@ section_re = ^secrets/kcm$
 section_re = ^domain/[^/\@]\+$
 section_re = ^domain/[^/\@]\+/[^/\@]\+$
 section_re = ^application/[^/\@]\+$
+section_re = ^certmap/[^/\@]\+/[^/\@]\+$
 
 
 [rule/allowed_sssd_options]
@@ -765,3 +766,12 @@ option = use_fully_qualified_names
 
 [rule/sssd_checks]
 validator = sssd_checks
+
+[rule/allowed_certmap_options]
+validator = ini_allowed_options
+section_re = ^certmap/[^/\@]\+/[^/\@]\+$
+
+option = matchrule
+option = maprule
+option = priority
+option = domains
