--- a/src/config/cfg_rules.ini
+++ b/src/config/cfg_rules.ini
@@ -636,6 +636,7 @@ option = ldap_initgroups_use_matching_rule_in_chain
 option = ldap_krb5_init_creds
 option = ldap_krb5_keytab
 option = ldap_krb5_ticket_lifetime
+option = ldap_library_debug_level
 option = ldap_max_id
 option = ldap_min_id
 option = ldap_netgroup_member
