--- a/Makefile.am
+++ b/Makefile.am
@@ -582,6 +582,7 @@ SSSD_CACHE_REQ_OBJ = \
 	src/responder/common/cache_req/plugins/cache_req_group_by_filter.c \
 	src/responder/common/cache_req/plugins/cache_req_initgroups_by_name.c \
 	src/responder/common/cache_req/plugins/cache_req_initgroups_by_upn.c \
+	src/responder/common/cache_req/plugins/cache_req_subid_ranges_by_name.c \
 	src/responder/common/cache_req/plugins/cache_req_object_by_sid.c \
 	src/responder/common/cache_req/plugins/cache_req_object_by_name.c \
 	src/responder/common/cache_req/plugins/cache_req_object_by_id.c \
@@ -1536,6 +1537,7 @@ sssd_nss_SOURCES = \
     src/responder/nss/nss_protocol.c \
     src/responder/nss/nss_protocol_pwent.c \
     src/responder/nss/nss_protocol_grent.c \
+    src/responder/nss/nss_protocol_subid.c \
     src/responder/nss/nss_protocol_netgr.c \
     src/responder/nss/nss_protocol_svcent.c \
     src/responder/nss/nss_protocol_hostent.c \
@@ -2665,6 +2667,7 @@ nss_srv_tests_SOURCES = \
      src/responder/nss/nss_protocol_hostent.c \
      src/responder/nss/nss_protocol_netent.c \
      src/responder/nss/nss_protocol_sid.c \
+     src/responder/nss/nss_protocol_subid.c \
      src/responder/nss/nss_utils.c \
      src/responder/nss/nsssrv_mmap_cache.c
 nss_srv_tests_CFLAGS = \
